--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "description": "A conference call implementation using WebRTC, Socket.io and Node.js.",
   "main": "src/app.js",
   "dependencies": {
+    "@google-cloud/translate": "^8.0.2",
+    "chalk": "^4.1.2",
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "figlet": "^1.7.0",
     "firebase": "^8.7.0",
+    "https": "^1.0.0",
+    "ip": "^1.1.8",
     "serve-favicon": "^2.5.0",
     "socket.io": "^2.4.0"
   },
@@ -18,11 +23,8 @@
     "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  
   "keywords": [
     "LiveStream",
     "Server"
   ]
-
- 
 }
